Fix quote spacing, fixes #603

--- a/modules/ept-frontend/client/scss/ept/global/_posts.scss
+++ b/modules/ept-frontend/client/scss/ept/global/_posts.scss
@@ -29,12 +29,13 @@
   }
 }
 .quoteHeader {
-  margin: 0 0 0 1rem;
+  margin: 1rem 0 0 1rem;
   padding: 0 0.625rem 0;
   border-left: 4px solid RGB(221, 221, 221);
 }
+.quote .quoteHeader { margin-top: 0; }
 .quote {
-  margin: 0 0 1rem 1rem;
+  margin: 0 0 0rem 1rem;
   padding: 0 0.625rem 0;
   border-left: 4px solid RGB(221, 221, 221);
   ul, ol { margin-left: 1.625rem }
